src/objects/DBTuna_License__c.object
<CustomObject>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <label>Account Manager</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Contacts__c</fullName>
        <label>Additional Contacts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Recipients__c</fullName>
        <label>Additional Recipients</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ExpiryDate__c</fullName>
        <label>ExpiryDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LicenseKey__c</fullName>
        <label>LicenseKey</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Data__c</fullName>
        <label>License Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>DBTunas</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sales_Rep__c</fullName>
        <label>Sales Rep</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Server_Name__c</fullName>
        <label>Server Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Technical_Owner__c</fullName>
        <label>Technical Owner</label>
        <type>TextArea</type>
    </fields>
    <label>AppDynamics For Databases - License</label>
    <nameField>
        <label>License</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AppDynamics For Databases - License</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>